--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^6.0.3",
     "@astrojs/tailwind": "^5.0.2",
-    "astro": "^3.2.4",
-    "tailwindcss": "^3.0.24"
+    "astro": "^3.4.2",
+    "astro-compress": "^2.2.0",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "daisyui": "^3.9.2"
+    "daisyui": "^3.9.4"
   }
 }
