--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,7 +19,7 @@ FROM base AS runtime
 COPY --from=prod-deps /app/node_modules ./node_modules
 COPY --from=build /app/dist ./dist
 
-ENV HOST=amsoc.docker.localhost
+ENV HOST=0.0.0.0
 ENV PORT=4321
 EXPOSE 4321
 CMD node ./dist/server/entry.mjs
