--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -3,13 +3,13 @@ WORKDIR /app
 
 # By copying only the package.json and package-lock.json here, we ensure that the following `-deps` steps are independent of the source code.
 # Therefore, the `-deps` steps will be skipped if only the source code changes.
-COPY package.json pnpm-lock.yaml ./
+COPY package.json package-lock.json ./
 
 FROM base AS prod-deps
 RUN npm install --production
 
 FROM base AS build-deps
-RUN npm install --production=false
+RUN npm install --dev
 
 FROM build-deps AS build
 COPY . .
@@ -19,6 +19,8 @@ FROM base AS runtime
 COPY --from=prod-deps /app/node_modules ./node_modules
 COPY --from=build /app/dist ./dist
 
-EXPOSE 4321
-ENV HOST=0.0.0.0
-CMD node ./dist/server/entry.mjs
+# ENV DEBUG=express-session
+# DEBUG=express:*
+ENV PORT=3000
+EXPOSE 3000
+CMD node ./dist/index.js
