DOCKER: finish fighting docker and npm

--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:lts AS base
+FROM node:lts-slim AS base
 WORKDIR /app
 
 # By copying only the package.json and package-lock.json here, we ensure that the following `-deps` steps are independent of the source code.
@@ -6,10 +6,10 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 
 FROM base AS prod-deps
-RUN npm install --production
+RUN npm ci --omit=dev
 
 FROM base AS build-deps
-RUN npm install --dev
+RUN npm ci
 
 FROM build-deps AS build
 COPY . .
