--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@astrojs/node": "^6.0.3",
+    "@astrojs/svelte": "^4.0.0",
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.4.2",
     "astro-compress": "^2.2.0",
+    "svelte": "^4.2.8",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "daisyui": "^3.9.4"
+    "daisyui": "^4.4.19",
+    "prettier": "^3.1.0",
+    "prettier-plugin-astro": "^0.12.2",
+    "prettier-plugin-tailwindcss": "^0.5.9"
   }
 }
