--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,9 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^4.4.19",
-    "prettier": "^3.1.0",
+    "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.2",
+    "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-tailwindcss": "^0.5.9"
   }
 }
